refactor: enhance UI/UX, fix critical bugs, and improve security